[package]
name = "divbuf"
version = "0.4.1"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/asomers/divbuf"
description = """
Buffer object that can be recursively divided into smaller buffers
"""
documentation = "https://docs.rs/divbuf"
categories = ["data-structures"]
keywords = ["buffers", "io", "zero-copy"]
exclude       = [
    ".gitignore",
    ".travis.yml"
]
rust-version = "1.80"

[package.metadata.docs.rs]
features = ["experimental"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
experimental = []

[dependencies]

[dev-dependencies]
